--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -46,9 +46,10 @@ jobs:
       # https://nose.readthedocs.io
       - run:
           name: run tests
-          command: |
-            . venv/bin/activate
-            python manage.py test home
+          command:
+            - coverage run --source='.' manage.py test home
+            - coverage report --omit="home/apps/*","home/validators.py","home/migrations/*","alpha_home/*","manage.py","home/test.py","home/receiver.py"
+            - coverage html --omit="home/apps/*","home/validators.py","home/migrations/*","alpha_home/*","manage.py","home/test.py","home/receiver.py"
 
       - store_artifacts:
           path: test-reports
