--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 # Edit at https://www.gitignore.io/?templates=macos,linux,windows,jetbrains,visualstudio,jetbrains+all,visualstudiocode
 # Byte-compiled / optimized / DLL files
 __pycache__/
+venv/
 *.py[cod]
 *$py.class
 ### JetBrains ###
